2.9.5
 - setup: bump dclab from 0.39.13 to 0.39.15
2.9.4
 - enh: display session file name in window title
 - setup: drop support for older numpy versions
 - setup: bump dclab from 0.39.9 to 0.39.13 (fix visualization of
   the "ml_class" score when the ml_score features contain nans)
2.9.3
 - fix: implement closeEvent in main and ask user before exiting
 - fix: fix possible failure during update check
 - fix: show a message box when the R version is incompatible (#114)
 - ref: only reload R/lme4 information in preferences when the
   corresponding tab is selected to avoid preferences lock-up (#114)
 - tests: use hidden settings variable to skip asking the user to
   clear the session
 - setup: bump dclab from 0.39.5 to 0.39.9
2.9.2
 - setup: bump dclab from 0.39.3 to 0.39.5 (fix opening files
   with some online filter settings)
2.9.1
 - enh: add button "Find best spacing" in Plot tab in Analysis View
   that iteratively finds sane spacing values (#110)
 - enh: notify user in plot if contour spacing is too large (#110)
 - enh: add action to remove all datasets from a session (#97)
 - fix: mysterious behavior of subclassed pg.ColorBarItem (#109)
 - setup: bump dclab from 0.39.1 to 0.39.3 (increased verbosity,
   renamed feature labels, refactored DCOR access)
2.9.0
 - feat: add support for extensions in the form of loading dclab
   plugin and machine-learning features (#85)
 - setup: drop support for Python 3.7
 - setup: bump dclab from 0.37.2 to 0.39.1
2.8.1
 - fix: wrong scale for viscosity in bulk emodulus computation (#104)
 - fix: save unused polygon filters in sessions (#101)
 - fix: allow to delete polygon filters (#100)
 - setup: bump dclab from 0.37.0 to 0.37.2 (enhanced speed for
   operations involving contour computation)
2.8.0
 - BREAKING CHANGE: The volume feature in all previous versions was
   overestimated by about 2µm³. Please re-run your analysis pipeline.
 - setup: bump pyqtgraph from 0.12.2 to 0.12.3